# ML-on-Stock-Market-Prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: config.json
notebooks/: 01_data_features.ipynb  02_modeling.ipynb  03_backtest.ipynb
