[project]
name = "ml-on-stock-market-prediction"
version = "0.1.0"
description = "ML on Stock Market Prediction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Data
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Machine Learning
    "scikit-learn>=1.3.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.0.0",
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "xgboost>=3.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
